Fix fullscreen popup on mobile

--- a/src/components/Popup/index.module.scss
+++ b/src/components/Popup/index.module.scss
@@ -40,7 +40,7 @@
   @media (max-width: $mobile-width) {
     align-items: flex-start;
 
-    .popup {
+    .popup:not(.fullscreen) {
       position: absolute;
       bottom: 0px;
       padding: 32px 20px;
